@@ -6,6 +6,7 @@ New features
 -
 Bug fixes
 ~~~~~~~~~
+- #2411: problem with image widget upgrade in case recent profiles applied
 - #2394: skip older template widgets and inconsistent compounds in upgrade
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
